Update to TTAPI 3.0.0. Change how we handle disconnects. Add /djtimers command.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"url": "https://github.com/ertemplin/TurnTable-Bot.git"
 	},
 	"dependencies" : {
-		"ttapi": "2.3.x"
+		"ttapi": "3.x.x"
 	}
 
 }
